identifier hilighter now shows read/write and find usages shows declaration, reads and writes

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -344,6 +344,7 @@
 
         <colorSettingsPage implementation="com.sylvanaar.idea.Lua.editor.highlighter.LuaColorsPage"/>
 
+        <readWriteAccessDetector implementation="com.sylvanaar.idea.Lua.editor.highlighter.LuaReadWriteAccessDetector" />
 
         <quoteHandler fileType="Lua" className="com.sylvanaar.idea.Lua.editor.highlighter.LuaQuoteHandler" />
 
