--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -16,52 +16,63 @@
 #
 
 # color settings
-color.settings.name=Lua
-color.settings.keyword=Keywords
-color.settings.comment=Comments
-color.settings.number=Numbers
-color.settings.string=Strings
-
-color.settings.operation=Operators
-color.settings.brackets=Brackets
 color.settings.bad_character=Unknown character
+color.settings.braces=Curly Braces
+color.settings.brackets=Brackets
 color.settings.comma=Comma
-
-
+color.settings.comment=Comments
+color.settings.constant.keywords=Value Keywords
+color.settings.field=Field
+color.settings.globals=Global Variables
 color.settings.identifier=Identifier
-color.settings.longstring.braces=Extended String Braces
-color.settings.longstring=Extended String
+color.settings.keyword=Keywords
+color.settings.locals=Local Variables
 color.settings.longcomment.braces=Extended Comment Braces
 color.settings.longcomment=Extended Comment
-color.settings.parenths=Parenthesis
-color.settings.braces=Curly Braces
-color.settings.constant.keywords=Value Keywords
-parsing.message.expected=expected token
-parsing.message.unexpected=found unexpected token
-parsing.error.expr.expr_expected=expression expected
-run.configuration.title=Execute Lua Script
-run.configuration.type.description=Execute the script using the Lua interpreter
-run.configuration.classpath.from.module.choose=Create Property
-show.smth=show smth
-vm.parameters=vm parms
-program.parameters=program parms
-new.menu.action.text=menu action
-new.menu.action.description=menu desc
-plugin.descriptor=Lua
-newfile.menu.action.text=New Lua Script
-newfile.menu.action.description=Create a new Lua script file
-newfile.dialog.title=Create Lua script
-newfile.command.name=Lua script
-newfile.dialog.prompt=Create a new Lua script
-file.template.group.title.bash=Lua Script File Templates
-color.settings.globals=Global Variables
-color.settings.locals=Local Variables
-color.settings.field=Field
-color.settings.tailcall=Tail Call Returns
-color.settings.parameter=Parameter
-color.settings.upvalue=Upvalue
-color.settings.luadoc=LuaDoc Comment
+color.settings.longstring.braces=Extended String Braces
+color.settings.longstring=Extended String
 color.settings.luadoc.tag=LuaDoc Tag
 color.settings.luadoc.value=LuaDoc Value
+color.settings.luadoc=LuaDoc Comment
+color.settings.name=Lua
+color.settings.number=Numbers
+color.settings.operation=Operators
+color.settings.parameter=Parameter
+color.settings.parenths=Parenthesis
+color.settings.string=Strings
+color.settings.tailcall=Tail Call Returns
+color.settings.upvalue=Upvalue
+
+file.template.group.title.bash=Lua Script File Templates
+
+new.menu.action.description=menu desc
+new.menu.action.text=menu action
+
+newfile.command.name=Lua script
+newfile.dialog.prompt=Create a new Lua script
+newfile.dialog.title=Create Lua script
+newfile.menu.action.description=Create a new Lua script file
+newfile.menu.action.text=New Lua Script
+
+parsing.error.expr.expr_expected=expression expected
+parsing.message.expected=expected token
+parsing.message.unexpected=found unexpected token
+
+plugin.descriptor=Lua
+program.parameters=program parms
+
+run.configuration.classpath.from.module.choose=Create Property
+run.configuration.title=Execute Lua Script
+run.configuration.type.description=Execute the script using the Lua interpreter
+
+show.smth=show smth
+vm.parameters=vm parms
+
+moduletype.description=Provides facilities for developing <strong>Lua</strong> applications.
+moduletype.name=Lua Module
+sdk.chooser.luabinaries.prompt=Specify the Lua binaries directory
+sdk.chooser.select.sdk.prompt=Lua SDK version:
+sdk.chooser.configure.button=Configure...
+
 
 
