--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.9.94</version>
-    <!--##teamcity[buildNumber '0.9.94']-->
+    <version>0.9.95</version>
+    <!--##teamcity[buildNumber '0.9.95']-->
     <idea-version since-build="80.8000" until-build="107.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -63,6 +63,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>0.9.94-5</dt>
+            <dd>Misc Fixes</dd><br>
             <dt>0.9.93</dt>
             <dd>Field renaming and luadoc generation for tables</dd><br>
             <dt>0.9.92</dt>
