fixed the issue with the watches list not updating correctly. Going to leave the debugger enabled so people can try it.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -341,8 +341,8 @@
         <programRunner implementation="com.sylvanaar.idea.Lua.run.LuaRunner"/>
 
         <!-- Script Debugging -->
-        <!--<programRunner implementation="com.sylvanaar.idea.Lua.debugger.LuaDebugRunner"/>-->
-        <!--<xdebugger.breakpointType implementation="com.sylvanaar.idea.Lua.debugger.LuaLineBreakpointType" />-->
+        <programRunner implementation="com.sylvanaar.idea.Lua.debugger.LuaDebugRunner"/>
+        <xdebugger.breakpointType implementation="com.sylvanaar.idea.Lua.debugger.LuaLineBreakpointType" />
 
         <!-- Editor -->
         <codeInsight.parameterInfo language="Lua" implementationClass="com.sylvanaar.idea.Lua.codeInsight.LuaParameterInfoHandler" />
