--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a09</version>
-    <!--##teamcity[buildNumber '1.0a09']-->
+    <version>1.0a10</version>
+    <!--##teamcity[buildNumber '1.0a10']-->
     <idea-version since-build="99.18" until-build="107.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -30,15 +30,15 @@
         <b>Features:</b>
         <br>
             <ul>
-                <li>Modules support (Experimental)</li>
-                <li>Debugger (Experimental)</li>
+                <li>Modules support (<b>Experimental</b>)</li>
+                <li>Debugger (<b>Experimental</b>)</li>
                 <li>LuaDoc Creation, Highlighting and Folding</li>
                 <li>Live Templates ("Zen Lua")</li>
                 <li>Custom API Support including custom function signatures and documentation</li>
                 <li>Lua Standard Library Information via Quickhelp (ctrl-Q)</li>
                 <li>Goto Symbol</li>
-                <li>Safe Delete (<b>Experimental</b>)</li>
-                <li>Rename Identifier (<b>Experimental</b>)</li>
+                <li>Safe Delete</li>
+                <li>Rename Identifier</li>
                 <li>JavaHelp For Lua 5.1</li>
                 <li>Go to definition</li>
                 <li>find usages</li>
@@ -65,6 +65,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>1.0a10</dt>
+            <dd>Fix the error reporter and language console up down arrow keys to cylcle through command history</dd><br>
             <dt>1.0a06-9</dt>
             <dd>Minor fixes</dd><br>
             <dt>1.0a03-5</dt>
@@ -269,13 +271,13 @@
         </html>
         ]]></change-notes>
 
+    <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.lang</depends>
-    <!--<depends>com.intellij.modules.xdebugger</depends>-->
+    <depends>com.intellij.modules.xdebugger</depends>
     
     <!--<depends optional="true" config-file="lua-copyright.xml">com.intellij.copyright</depends>-->
 
     <application-components>
-        <!-- Add your application components here -->
         <component>
             <implementation-class>com.sylvanaar.idea.Lua.sdk.KahluaSdk</implementation-class>
             <interface-class>com.intellij.openapi.projectRoots.Sdk</interface-class>
@@ -302,12 +304,6 @@
         <!--<action id="trigger.exception" class="com.sylvanaar.idea.errorreporting.TriggerExceptionAction" text="Trigger Exception">-->
             <!--<add-to-group group-id="NewGroup" relative-to-action="NewFile" anchor="after"/>-->
         <!--</action>-->
-        <!--<action id="trigger.exception2" class="com.intellij.diagnostic.DropAnErrorAction"-->
-                <!--text="Trigger Exception2">-->
-            <!--<add-to-group group-id="NewGroup" relative-to-action="NewFile" anchor="after"/>-->
-        <!--</action>-->
-
-
         <action id="com.sylvanaar.idea.Lua.console.RunLuaConsoleAction"
                 class="com.sylvanaar.idea.Lua.console.RunLuaConsoleAction"
                 text="Run Lua Console..." description="Run the Lua console">
@@ -409,8 +405,6 @@
 
         <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.findUsages.LuaFindUsagesProvider" />
 
-        <!--<referencesSearch implementation="com.sylvanaar.idea.Lua.findUsages.LuaIdentifierSearch"/>-->
-
         <lang.namesValidator language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.LuaNamesValidation" />
 
         <gotoSymbolContributor implementation="com.sylvanaar.idea.Lua.editor.LuaGotoSymbolContributor" />
@@ -437,17 +431,12 @@
         <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaGlobalDeclarationIndex" />
         <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaFieldIndex" />
 
-        <!--<java.shortNamesCache implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.LuaShortNamesCache" />-->
-        <!--<targetElementEvaluator language="Lua" implementationClass="com.sylvanaar.idea.Lua.codeInsight.LuaTargetElementEvaluator"/>-->
-        <!--<basicWordSelectionFilter implementation="com.sylvanaar.idea.Lua.editor.LuaWordSelectionFilter" />-->
-
         <!-- Live Templates -->
         <liveTemplateContext implementation="com.sylvanaar.idea.Lua.lang.template.LuaTemplateContextType"/>
         <defaultLiveTemplatesProvider implementation="com.sylvanaar.idea.Lua.lang.template.LuaDefaultLiveTemplateProvider" />
 
         <liveTemplateMacro implementation="com.sylvanaar.idea.Lua.lang.template.LuaFileMacro" />
         <liveTemplateMacro implementation="com.sylvanaar.idea.Lua.lang.template.LuaFunctionMacro" />
-
 
     <!-- control -->
     <intentionAction>
