update version info for 1.0a16

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a15</version>
-    <!--##teamcity[buildNumber '1.0a15']-->
+    <version>1.0a16</version>
+    <!--##teamcity[buildNumber '1.0a16']-->
     <idea-version since-build="99.18" until-build="107.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -66,6 +66,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>1.0a16</dt>
+            <dd>Bug Fixes</dd><br>
             <dt>1.0a15</dt>
             <dd>Major performance fixes for various global variable cases</dd><br>
             <dt>1.0a14</dt>
