Implementation of new lua script using file templates

--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -43,7 +43,7 @@ color.settings.string=Strings
 color.settings.tailcall=Tail Call Returns
 color.settings.upvalue=Upvalue
 
-file.template.group.title.bash=Lua Script File Templates
+file.template.group.title.lua=Lua Script File Templates
 
 new.menu.action.description=menu desc
 new.menu.action.text=menu action
