--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -433,6 +433,8 @@
         
         <sdkType implementation="com.sylvanaar.idea.Lua.sdk.LuaSdkType"/>
 
+        <consoleFilterProvider implementation="com.sylvanaar.idea.Lua.run.LuaLineErrorFilterProvider" />
+
         <!--<library.creator implementation="com.sylvanaar.idea.Lua.library.LuaLibraryCreator"/>-->
         <library.presentationProvider implementation="com.sylvanaar.idea.Lua.library.LuaLibraryPresentationProvider"/>
         <library.type implementation="com.sylvanaar.idea.Lua.library.LuaLibraryType"/>
