--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -290,7 +290,7 @@
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.xdebugger</depends>
     
-    <!--<depends optional="true" config-file="lua-copyright.xml">com.intellij.copyright</depends>-->
+    <depends optional="true" config-file="lua-copyright.xml">com.intellij.copyright</depends>
 
     <application-components>
         <component>
