imported patch Aliases * * *
* * *

* * *
added some very basic type inference so it can be leveraged by the autocomplete mechanism.
* * *
some what more elaborate changes, dont know if I will keep these.
* * *
[mq]: very quirky
* * *
IDLua-142  java.lang.NullPointerException
* * *
imported patch misc

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -430,6 +430,8 @@
         <lang.refactoringSupport language="Lua" implementationClass="com.sylvanaar.idea.Lua.refactoring.LuaRefactoringSupportProvider" />
 
         <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.findUsages.LuaFindUsagesProvider" />
+        <referencesSearch implementation="com.sylvanaar.idea.Lua.findUsages.LuaAliasedElementSearcher"/>
+
 
         <lang.namesValidator language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.LuaNamesValidation" />
 
